One Last Theme Check
Yeah I forgot to change the version number oops

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -12,6 +12,10 @@
     background-color: transparent;
 }
 
+.container_fb64c9 /* Missing Create Thread Layer */{
+  background: none;
+}
+
 .scroller__23746,
 .container__551b0 /* Discovery */ {
   background: none;
@@ -559,7 +563,8 @@
 }
 
 .container_fea832,
-.container_a45028 {
+.container_a45028,
+.container_fed6d3 {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -1778,7 +1783,8 @@
 }
 
 .container_fea832,
-.container_a45028 {
+.container_a45028,
+.container_fed6d3 {
     border-radius: 6px;
 }
 
@@ -2568,7 +2574,7 @@ span.button__67645.enabled__67645:hover path {
     background-color: #912;
 }
 
-.activity__5d473 {
+.activityText__5d473 {
     color: white;
 }
 
@@ -2743,13 +2749,13 @@ span.button__67645.enabled__67645:hover path {
     border-radius: 0 2px 2px 0;
 }
 
-.button_a24e84 {
+.button_f563df {
     border-radius: 4px;
     background-color: rgba(0, 0, 0, .3);
 }
 
-.button_a24e84:hover,
-.keyboard-mode .button_a24e84.focused_a24e84 {
+.button_f563df:hover,
+.keyboard-mode .button_f563df.focused_f563df {
     background-color: black;
 }
 
@@ -3523,12 +3529,12 @@ span.button__67645.enabled__67645:hover path {
     color: white;
 }
 
-.card_f30ffe {
+.card__4bb93 {
     border: 1px solid black;
     background-color: rgba(0, 0, 0, .5);
 }
 
-.qualitySettingsContainer_a78967,
+.qualitySettingsContainer_c6d3dc,
 .container_fe5744 {
     border: none;
 }
@@ -3537,15 +3543,15 @@ span.button__67645.enabled__67645:hover path {
     border-color: transparent;
 }
 
-.selectorButton_a78967 {
+.selectorButton_c6d3dc {
     background: rgba(0, 0, 0, .2);
 }
 
-.selectorButton_a78967:not(.selectorButtonPremiumRequired__9df5b):hover {
+.selectorButton_c6d3dc:not(.selectorButtonPremiumRequired__9df5b):hover {
     background-color: rgba(0, 0, 0, .6);
 }
 
-.selectorButtonSelected_a78967 {
+.selectorButtonSelected_c6d3dc {
     background-color: black;
 }
 
@@ -4142,11 +4148,13 @@ span.button__67645.enabled__67645:hover path {
 }
 
 .header_c0e32c,
+.header_fed6d3,
 .container__0800c {
     background-color: #141414;
 }
 
-.header_c0e32c {
+.header_c0e32c,
+.header_fed6d3 {
     box-shadow: none;
 }
 
@@ -4786,21 +4794,21 @@ span.button__67645.enabled__67645:hover path {
     background-color: rgba(0, 0, 0, .1);
 }
 
-.tabBar_f1fd9c {
+.tabBar__0b563 {
     border-bottom: none;
 }
 
-.tabBar_f1fd9c .brand_b3f026.item_b3f026 {
+.tabBar__0b563 .brand_b3f026.item_b3f026 {
     color: silver;
 }
 
-.tabBar_f1fd9c .brand_b3f026.item_b3f026:hover {
+.tabBar__0b563 .brand_b3f026.item_b3f026:hover {
     color: #e8e8e8;
     border-bottom: 2px solid transparent;
 }
 
-.tabBar_f1fd9c.top_b3f026 .brand_b3f026.selected_b3f026.item_b3f026, 
-.tabBar_f1fd9c.top_b3f026 .brand_b3f026.selected_b3f026.item_b3f026:hover {
+.tabBar__0b563.top_b3f026 .brand_b3f026.selected_b3f026.item_b3f026, 
+.tabBar__0b563.top_b3f026 .brand_b3f026.selected_b3f026.item_b3f026:hover {
     color: white;
     border-bottom: 2px solid #912;
 }
@@ -4876,7 +4884,7 @@ span.button__67645.enabled__67645:hover path {
     background-color: transparent;
 }
 
-.container_b572de {
+.container__9fa5a {
     box-shadow: none;
     background-color: #282828;
     border: 1px solid rgba(255, 255, 255, .1);
@@ -4898,12 +4906,12 @@ span.button__67645.enabled__67645:hover path {
     background-color: rgba(0, 0, 0, .3);
 }
 
-.friendRequestsButton_c0c071 {
+.friendRequestsButton__523aa {
     background-color: rgba(255, 255, 255, .15);
     color: white;
 }
 
-.friendRequestsButton_c0c071:hover {
+.friendRequestsButton__523aa:hover {
     background-color: rgba(255, 255, 255, .25);
 
 }
