--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -12,6 +12,10 @@
     background-color: transparent;
 }
 
+.container_fb64c9 /* Missing Create Thread Layer */{
+  background: none;
+}
+
 .scroller__23746,
 .container__551b0 /* Discovery */ {
   background: none;
@@ -980,7 +984,8 @@
     font-weight: bold;
 }
 
-.header_c0e32c {
+.header_c0e32c,
+.header_fed6d3 {
     box-shadow: none;
 }
 
@@ -997,6 +1002,7 @@
 
 .container_fea832,
 .container_a45028,
+.container_fed6d3,
 .wrapper__14245 {
     background-color: rgba(0, 0, 0, .4);
 }
@@ -2326,7 +2332,7 @@
     background-color: #2AB;
 }
 
-.activity__5d473 {
+.activityText__5d473 {
     color: white;
 }
 
@@ -2412,13 +2418,13 @@
     background-color: rgba(0, 0, 0, 0.17);
 }
 
-.button_a24e84 {
+.button_f563df {
     border-radius: 4px;
     background-color: #2AB;
 }
 
-.button_a24e84:hover,
-.keyboard-mode .button_a24e84.focused_a24e84 {
+.button_f563df:hover,
+.keyboard-mode .button_f563df.focused_f563df {
     background-color: #1BC;
 }
 
@@ -3061,13 +3067,13 @@
     border-radius: 5px;
 }
 
-.reactionBtn__23977.forceShowLook__23977 {
+.theme-dark .reactionBtn__23977.forceShow__23977 {
     background-color: rgba(34, 170, 187, .4);
     border-radius: 4px;
     border: 2px solid transparent;
 }
 
-.reactionBtn__23977.forceShowLook__23977:hover {
+.theme-dark .reactionBtn__23977.forceShow__23977:hover {
     background-color: rgba(17, 187, 204, .4);
     border-color: #1BC;
 }
@@ -3292,15 +3298,15 @@
     border-color: transparent;
 }
 
-.selectorButton_a78967 {
+.selectorButton_c6d3dc {
     background: rgba(0, 0, 0, .2);
 }
 
-.selectorButton_a78967:hover {
+.selectorButton_c6d3dc:hover {
     background-color: rgba(0, 0, 0, .6);
 }
 
-.selectorButtonSelected_a78967 {
+.selectorButtonSelected_c6d3dc {
     background-color: black;
 }
 
@@ -3886,6 +3892,7 @@
 }
 
 .header_c0e32c,
+.header_fed6d3,
 .container__0800c {
     background-color: #141414;
 }
@@ -4546,7 +4553,7 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.container_b572de {
+.container__9fa5a {
     box-shadow: none;
     background-color: #282828;
     border: 1px solid rgba(255, 255, 255, .1);
@@ -4572,12 +4579,12 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.friendRequestsButton_c0c071 {
+.friendRequestsButton__523aa {
     background-color: rgba(255, 255, 255, .15);
     color: white;
 }
 
-.friendRequestsButton_c0c071:hover {
+.friendRequestsButton__523aa:hover {
     background-color: rgba(255, 255, 255, .25);
 
 }
@@ -4710,7 +4717,7 @@
     height: 55px;
 }
 
-.theme-dark .panel_bf1a22 {
+.theme-dark .panel__5dec7 {
     background: none;
 }
 
