--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -11,6 +11,10 @@
     background-size: cover;
 }
 
+.container_fb64c9 /* Missing Create Thread Layer */{
+  background: none;
+}
+
 .scroller__23746,
 .container__551b0 /* Discovery */ {
   background: none;
@@ -589,7 +593,7 @@
     border-radius: 4px;
 }
 
-.scrollableContainer__74017 {
+#app-mount .scrollableContainer__74017 {
     background-color: transparent;
     border-radius: 4px;
 }
@@ -603,7 +607,8 @@
 }
 
 .container_fea832,
-.container_a45028 {
+.container_a45028,
+.container_fed6d3 {
     background-color: transparent;
 }
 
@@ -626,7 +631,8 @@
     background-color: rgba(0,0,0,.3);
 }
 
-.header_c0e32c {
+.header_c0e32c,
+.header_fed6d3 {
     box-shadow: none;
 }
 
@@ -2228,7 +2234,8 @@ button.button__67645.enabled__67645:hover {
     background-color: transparent;
 }
 
-.header_c0e32c {
+.header_c0e32c,
+.header_fed6d3 {
     background-color: #1c1c1c;
     box-shadow: none;
 }
@@ -2263,13 +2270,13 @@ button.button__67645.enabled__67645:hover {
     background-color: rgba(0, 0, 0, .2);
 }
 
-.button_a24e84 {
+.button_f563df {
     border-radius: 3px;
     background-color: rgba(243, 172, 197, .3);
 }
 
-.button_a24e84:hover, 
-.keyboard-mode .button_a24e84.focused_a24e84 {
+.button_f563df:hover, 
+.keyboard-mode .button_f563df.focused_f563df {
     background-color: rgba(243, 172, 197, .7);
 }
 
@@ -2525,7 +2532,7 @@ button.button__67645.enabled__67645:hover {
 }
 
 .clickable__91a9d:hover .layout__91a9d .name__5d473,
-.clickable__91a9d:hover .layout__91a9d .activity__5d473 {
+.clickable__91a9d:hover .layout__91a9d .activityText__5d473 {
     color: white !important;
 }
 
@@ -2535,7 +2542,7 @@ button.button__67645.enabled__67645:hover {
 }
 
 .selected__91a9d .layout__91a9d .name__5d473,
-.selected__91a9d .layout__91a9d .activity__5d473 {
+.selected__91a9d .layout__91a9d .activityText__5d473 {
     color: black !important;
 }
 
@@ -3161,7 +3168,7 @@ button.button__67645.enabled__67645:hover {
     color: white;
 }
 
-#app-mount .reactionBtn__23977.forceShowLook__23977 {
+#app-mount .theme-dark .reactionBtn__23977.forceShow__23977 {
     background-color: #f3acc5;
     border: none;
 }
@@ -4359,7 +4366,7 @@ button.button__67645.enabled__67645:hover {
     background-color: rgba(0, 0, 0, .2);
 }
 
-.container_b572de {
+.container__9fa5a {
     box-shadow: none;
     background-color: #282828;
     border: 1px solid rgba(255, 255, 255, .1);
@@ -4385,12 +4392,12 @@ button.button__67645.enabled__67645:hover {
     background-color: rgba(0, 0, 0, .3);
 }
 
-.friendRequestsButton_c0c071 {
+.friendRequestsButton__523aa {
     background-color: rgba(255, 255, 255, .15);
     color: white;
 }
 
-.friendRequestsButton_c0c071:hover {
+.friendRequestsButton__523aa:hover {
     background-color: rgba(255, 255, 255, .25);
 
 }
